--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,19 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
     <title>로그인 페이지</title>
 </head>
 <body>
-<div id="login-form">
-    <div class="login-id-label">아이디</div>
-    <input id="username" type="text" name="username" class="login-input-box">
+<header class="login" style="background-color: white">
+    <h1>WAITING CATCH</h1>
+</header>
+<div class="login-wrap">
+    <input class="id-input" id="username" type="text" name="username" placeholder="아이디">
 
-    <div class="login-id-label">비밀번호</div>
-    <input id="password" type="password" name="password" class="login-input-box">
+    <input class="password-input" id="password" type="password" name="password" placeholder="비밀번호">
 
-    <button id="login-id-submit" onclick="login()">로그인</button>
+    <button id="login-id-submit" class="btn login-btn" onclick="login()">로그인</button>
+    <button class="btn login-btn" onclick="location.href='/signup'">판매자 신청</button>
 
     <div id="login-failed" style="display:none" class="alert alert-danger" role="alert">로그인에 실패하였습니다.</div>
 </div>
@@ -53,7 +61,7 @@
             success: function (response, status, xhr) {
                 if (response === 'success') {
                     let host = window.location.host;
-                    let url = host + '/hello';
+                    let url = host + '/seller';
 
                     window.location.href = 'http://' + url;
                     localStorage.setItem('accessToken', xhr.getResponseHeader('Authorization'))
