--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -3,103 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <title>이벤트 페이지</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
 </head>
 <body>
-<h1>이벤트페이지</h1>
+<header>
+    <a href="/seller/lineup-page">
+        <div>WAITING CATCH</div>
+    </a>
+    <nav>
+        <ul>
+            <a href="/">판매자 님</a>
+            <a href="hello.html" th:href="@{/hello}" th:method="get">
+                <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
+            </a>
+        </ul>
+    </nav>
+</header>
+<nav class="menus">
+    <ul>
+        <a href="/seller/lineup-page">줄서기 현황</a>
+        <a href="/seller">매장 관리</a>
+        <a href="/menu">메뉴</a>
+        <a href="/event" style="color: #8B60C7">이벤트</a>
+    </ul>
+</nav>
+<div class="body">
+    <div class="sellerEvent">
+        <h1 style="color: #8B60C7">이벤트</h1>
 
-<!--<td>-->
-<!--    <a th:href="@{/event}" th:method="get" enctype="multipart/form-data">-->
-<!--        <button onclick="sendTokenInfo()" type=" button">이벤트 목록 가저오기-->
-<!--        </button>-->
-<!--    </a>-->
-<!--</td>-->
-<!--<a href="/event-info">-->
-<!--    <button type="text">이벤트 목록 가저오기</button>-->
-<!--</a>-->
-<a href="/event/new">
-    <button type="text">새로운 이벤트 생성</button>
-</a>
-<!--<a href="/event/couponcreator">-->
-<!--    <button type="text">이벤트에 쿠폰생성자 생성</button>-->
-<!--</a>-->
-<!--<a href="/event-update">-->
-<!--    <button type="text">이벤트 수정하기</button>-->
-<!--</a>-->
-<a href="/event-updatecreater">
-    <button type="text">쿠폰생성자 수정하기</button>
-</a>
-<a href="/event-delete">
-    <button type="text">이벤트 삭제하기</button>
-</a>
-
-
-<div class="container">
-    <div>
-        <table>
-            <thead>
-            <tr>
-                <th>이벤트 이름　</th>
-                <th>시작 시간　</th>
-                <th>종료 시간　</th>
-                <th>하위 쿠폰목록　　</th>
-                <th>쿠폰생성자 추가　</th>
-                <th>이벤트 수정　</th>
-                <th>이벤트 삭제</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="event : ${events}">
-                <td th:text="${event.name}"></td>
-                <td th:text="${event.eventStartDate}"></td>
-                <td th:text="${event.eventEndDate}"></td>
-                <td>
-                    <ul>
-                        <li th:each="couponCreator : ${event.couponCreators}">
-                            <span th:text="${couponCreator.name}"></span>
-                            <span th:text="${couponCreator.discountPrice}"></span>
-                            <span th:text="${couponCreator.discountType}"></span>
-                            <span th:text="${couponCreator.expireDate}"></span>
-                            <a th:href="@{/event/updateCouponCreator/{eventId}/{creatorId}(eventId=${event.eventId},creatorId=${couponCreator.id})}">
-                                <button type="button">수정</button>
-                            </a>
-                        </li>
-                    </ul>
-                </td>
-                <td>
-                    <a th:href="@{/event/couponcreator/{eventId}(eventId=${event.eventId})}">
-                        <button type="button">추가</button>
-                    </a>
-                </td>
-                <td>
-                    <a th:href="@{/event/update/{eventId}(eventId=${event.eventId})}">
-                        <button type="button">수정</button>
-                    </a>
-                </td>
-                <td>
-                    <a th:href="@{/event/delete/{eventId}(eventId=${event.eventId})}" th:method="delete">
-                        <button type="button">삭제</button>
-                    </a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <!--<td>-->
+        <!--    <a th:href="@{/event}" th:method="get" enctype="multipart/form-data">-->
+        <!--        <button onclick="sendTokenInfo()" type=" button">이벤트 목록 가저오기-->
+        <!--        </button>-->
+        <!--    </a>-->
+        <!--</td>-->
+        <!--<a href="/event-info">-->
+        <!--    <button type="text">이벤트 목록 가저오기</button>-->
+        <!--</a>-->
+        <a href="/event/new">
+            <button type="text" class="btn">새로운 이벤트 생성</button>
+        </a>
+        <!--<a href="/event/couponcreator">-->
+        <!--    <button type="text">이벤트에 쿠폰생성자 생성</button>-->
+        <!--</a>-->
+        <!--<a href="/event-update">-->
+        <!--    <button type="text">이벤트 수정하기</button>-->
+        <!--</a>-->
+        <!--        <a href="/event-updatecreater">-->
+        <!--            <button type="text" class="btn">쿠폰생성자 수정하기</button>-->
+        <!--        </a>-->
+        <!--        <a href="/event-delete">-->
+        <!--            <button type="text" class="btn">이벤트 삭제하기</button>-->
+        <!--        </a>-->
     </div>
-</div> <!-- /container -->
+
+    <div class="container">
+        <div>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>이벤트 이름</th>
+                    <th>시작 시간</th>
+                    <th>종료 시간</th>
+                    <th>하위 쿠폰목록</th>
+                    <th>쿠폰생성자</th>
+                    <th>이벤트 수정</th>
+                    <th>이벤트 삭제</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="event : ${events}">
+                    <td th:text="${event.name}"></td>
+                    <td th:text="${event.eventStartDate}"></td>
+                    <td th:text="${event.eventEndDate}"></td>
+                    <td>
+                        <ul>
+                            <li th:each="couponCreator : ${event.couponCreators}">
+                                <span th:text="${couponCreator.name}"></span>
+                                <span th:text="${couponCreator.discountPrice}"></span>
+                                <span th:text="${couponCreator.discountType}"></span>
+                                <span th:text="${couponCreator.expireDate}"></span>
+                                <a th:href="@{/event/updateCouponCreator/{eventId}/{creatorId}(eventId=${event.eventId},creatorId=${couponCreator.id})}">
+                                    <button type="button" class="btn">수정</button>
+                                </a>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>
+                        <a th:href="@{/event/couponcreator/{eventId}(eventId=${event.eventId})}">
+                            <button type="button" class="btn">추가</button>
+                        </a>
+                    </td>
+                    <td>
+                        <a th:href="@{/event/update/{eventId}(eventId=${event.eventId})}">
+                            <button type="button" class="btn">수정</button>
+                        </a>
+                    </td>
+                    <td>
+                        <a th:href="@{/event/delete/{eventId}(eventId=${event.eventId})}" th:method="delete">
+                            <button type="button" class="btn">삭제</button>
+                        </a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div> <!-- /container -->
 
 
-<!--<script>-->
-<!--    $(document).ready(function () {-->
-<!--        $.ajax({-->
-<!--            url: "/event-info",-->
-<!--            method: 'get',-->
-<!--            headers: {-->
-<!--                'Authorization': localStorage.getItem("accessToken"),-->
-<!--            },-->
-<!--            success: function (response) {-->
+    <!--<script>-->
+    <!--    $(document).ready(function () {-->
+    <!--        $.ajax({-->
+    <!--            url: "/event-info",-->
+    <!--            method: 'get',-->
+    <!--            headers: {-->
+    <!--                'Authorization': localStorage.getItem("accessToken"),-->
+    <!--            },-->
+    <!--            success: function (response) {-->
 
-<!--            }-->
-<!--        })-->
-<!--    })-->
-<!--</script>-->
+    <!--            }-->
+    <!--        })-->
+    <!--    })-->
+    <!--</script>-->
+</div>
 </body>
 </html>
