--- a/src/main/resources/templates/seller/lineup-list.html
+++ b/src/main/resources/templates/seller/lineup-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div id="lineupList">
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>순번</th>
@@ -22,13 +22,13 @@
             <td th:text="${lineup.startedAt}">2023-03-01T11:00:00</td>
             <td th:text="${lineup.arrivedAt}">2023-03-01T12:00:00</td>
             <td>
-                <button type="button" th:onclick="call([[${lineup.id}]])">고객 호출</button>
+                <button type="button" class="btn" th:onclick="call([[${lineup.id}]])">고객 호출</button>
             </td>
             <td>
-                <button type="button" th:onclick="arrive([[${lineup.id}]])">고객 도착</button>
+                <button type="button" class="btn" th:onclick="arrive([[${lineup.id}]])">고객 도착</button>
             </td>
             <td>
-                <button type="button" th:onclick="cancel([[${lineup.id}]])">취소</button>
+                <button type="button" class="btn" th:onclick="cancel([[${lineup.id}]])">취소</button>
             </td>
         </tr>
         </tbody>
