--- a/src/main/resources/templates/seller/lineup.html
+++ b/src/main/resources/templates/seller/lineup.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <title>줄서기 현황</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
+    <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
 </head>
 <body>
-<div id="lineupList"></div>
+<header>
+    <a href="/seller/lineup-page">
+        <div>WAITING CATCH</div>
+    </a>
+    <nav>
+        <ul>
+            <a href="/">판매자 님</a>
+            <a href="hello.html" th:href="@{/hello}" th:method="get">
+                <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
+            </a>
+        </ul>
+    </nav>
+</header>
+<nav class="menus">
+    <ul>
+        <a href="/seller/lineup-page" style="color: #8B60C7">줄서기 현황</a>
+        <a href="/seller">매장 관리</a>
+        <a href="/menu">메뉴</a>
+        <a href="/event">이벤트</a>
+    </ul>
+</nav>
+<div class="body">
+    <div class="lineup-main">
+        <h1 style="color: #8B60C7">줄서기 현황</h1>
+        <button type="button" onclick="openLineup()" class="btn">줄서기 오픈</button>
+        <button type="button" onclick="closeLineup()" class="btn">줄서기 마감</button>
+    </div>
+    <div id="lineupList"></div>
+</div>
 </body>
 <script>
     $(document).ready(function () {
@@ -20,5 +56,43 @@
             $('#lineupList').replaceWith(result);
         })
     });
+
+    function getLineupList() {
+        window.location.href = '/seller/lineup-page';
+    }
+
+    function openLineup() {
+        $.ajax({
+            url: '/seller/open-lineup',
+            type: 'PUT',
+            headers: {
+                'Authorization': localStorage.getItem('accessToken')
+            },
+            success: function () {
+                alert("줄서기 오픈 완료");
+                window.location.reload();
+            },
+            error: function (response) {
+                console.log(response);
+            }
+        })
+    }
+
+    function closeLineup() {
+        $.ajax({
+            url: '/seller/close-lineup',
+            type: 'PUT',
+            headers: {
+                'Authorization': localStorage.getItem('accessToken')
+            },
+            success: function () {
+                alert("줄서기 마감 완료");
+                window.location.reload();
+            },
+            error: function (response) {
+                console.log(response);
+            }
+        })
+    }
 </script>
 </html>
