--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -62,9 +62,13 @@
                 if (response === 'success') {
                     let host = window.location.host;
                     let url = host + '/seller';
-
+                    let todayDate = new Date();
+                    todayDate.setDate(todayDate.getDate() + 30); // 현재 시각 + 일 단위로 쿠키 만료 날짜
+                    document.cookie =
+                        'Authorization' + "=" + xhr.getResponseHeader('Authorization') + "; " +
+                        "path=/; expires=" + todayDate.toString() + ";";
+                    alert("로그인 성공")
                     window.location.href = 'http://' + url;
-                    localStorage.setItem('accessToken', xhr.getResponseHeader('Authorization'))
                 } else {
                     alert('로그인에 실패하셨습니다. 다시 로그인해 주세요.')
                     window.location.reload();
