--- a/src/main/resources/templates/seller-restaurantupdate.html
+++ b/src/main/resources/templates/seller-restaurantupdate.html
@@ -18,8 +18,8 @@
     <input type="text" id="openTime" name="openTime"><br>
     <label for="closeTime">closeTime</label>
     <input type="text" id="closeTime" name="closeTime"><br>
-    <label for="files">이미지 선택</label>
-    <input type="file" id="files" name="files"><br>
+    <label for="image">이미지 선택</label>
+    <input type="file" id="image" name="image"><br>
     <button type="submit">등록</button>
 
 </form>
