--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,6 +15,164 @@
     <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script>
+        function sample6_execDaumPostcode() {
+            new daum.Postcode({
+                oncomplete: function (data) {
+                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                    // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                    var addr = ''; // 주소 변수
+                    var extraAddr = ''; // 참고항목 변수
+
+                    //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                    if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                        addr = data.roadAddress;
+                    } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                        addr = data.jibunAddress;
+                    }
+
+                    // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                    // if (data.userSelectedType === 'R') {
+                    //     // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    //     // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    //     if (data.bname !== '' && /[동|로|가]$/g.test(data.bname)) {
+                    //         extraAddr += data.bname;
+                    //     }
+                    //     // 건물명이 있고, 공동주택일 경우 추가한다.
+                    //     if (data.buildingName !== '' && data.apartment === 'Y') {
+                    //         extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    //     }
+                    //     // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    //     if (extraAddr !== '') {
+                    //         extraAddr = ' (' + extraAddr + ')';
+                    //     }
+                    //     // 조합된 참고항목을 해당 필드에 넣는다.
+                    //     document.getElementById("sample6_extraAddress").value = extraAddr;
+                    //
+                    // } else {
+                    //     document.getElementById("sample6_extraAddress").value = '';
+                    // }
+
+                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                    document.getElementById('sample6_postcode').value = data.zonecode;
+                    document.getElementById("sample6_address").value = addr;
+                    // 커서를 상세주소 필드로 이동한다.
+                    document.getElementById("sample6_detailAddress").focus();
+                }
+            }).open();
+        }
+
+        $(document).ready(function () {
+            $('.selectCategoryBox').hide();
+        })
+
+        let selectedCategory = '';
+
+        function openSelectCategory() {
+            $('.selectParentCategoryBox').empty();
+            $('.selectChildCategoryBox').empty();
+            $('.selectGrandChildCategoryBox').empty();
+            $('.selectCategoryBox').show();
+
+            $.ajax({
+                type: 'GET',
+                url: `/api/admin/categories`,
+                success: function (response, status) {
+                    console.log(response)
+                    if (status === 'success') {
+                        for (let i = 0; i < response.length; i++) {
+                            let responseDto = response[i];
+                            let tempHtml = parentCategoryBox(responseDto);
+                            $('.selectParentCategoryBox').append(tempHtml);
+                        }
+                    }
+                },
+                error(error, response) {
+                    console.error(error);
+                }
+            })
+        }
+
+        function parentCategoryBox(responseDto) {
+            return `<div class="parentCategoryElement">
+                        <span>${responseDto.name}</span>
+                        <div class="categoryButtons">
+                        <input type="button" onclick="getChildCategory(${responseDto.id}); selectCategory(${responseDto.id})" class="btn" value="선택">
+                        </div>
+                    </div>`
+        }
+
+        function selectCategory(id) {
+            selectedCategory += id + ' ';
+            console.log(selectedCategory);
+            document.getElementById("categories").value = selectedCategory;
+        }
+
+        function getChildCategory(parentId) {
+            $('.selectChildCategoryBox').empty();
+
+            $.ajax({
+                type: 'GET',
+                url: `/api/admin/categories/` + parentId,
+                success: function (response, status) {
+                    console.log(response)
+                    if (status === 'success') {
+                        for (let i = 0; i < response.length; i++) {
+                            let responseDto = response[i];
+                            let tempHtml = childCategoryBox(responseDto);
+                            $('.selectChildCategoryBox').append(tempHtml);
+                        }
+                    }
+                },
+                error(error, response) {
+                    console.error(error);
+                }
+            })
+        }
+
+        function childCategoryBox(responseDto) {
+            return `<div class="parentCategoryElement">
+                        <span>${responseDto.name}</span>
+                        <div class="categoryButtons">
+                        <input type="button" onclick="getGrandChildCategory(${responseDto.id}); selectCategory(${responseDto.id})" class="btn" value="선택">
+                        </div>
+                    </div>`
+        }
+
+        function getGrandChildCategory(parentId) {
+            $('.selectGrandChildCategoryBox').empty();
+
+            $.ajax({
+                type: 'GET',
+                url: `/api/admin/categories/` + parentId,
+                success: function (response, status) {
+                    console.log(response)
+                    if (status === 'success') {
+                        for (let i = 0; i < response.length; i++) {
+                            let responseDto = response[i];
+                            let tempHtml = grandChildCategoryBox(responseDto);
+                            $('.selectGrandChildCategoryBox').append(tempHtml);
+                        }
+                    }
+                },
+                error(error, response) {
+                    console.error(error);
+                }
+            })
+        }
+
+        function grandChildCategoryBox(responseDto) {
+            return `<div class="parentCategoryElement">
+                        <span>${responseDto.name}</span>
+                        <div class="categoryButtons">
+                        <input type="button" onclick="selectCategory(${responseDto.id})" class="btn" value="선택">
+                        </div>
+                    </div>`
+        }
+    </script>
     <title>Register</title>
 </head>
 <body>
@@ -24,37 +182,88 @@
     </header>
     <!--<h1>Register Page</h1>-->
     <form action="/signup" method="post" class="register-wrap">
-        <!--        <label for="username">Username</label>-->
-        <input type="text" id="username" name="username" class="register-input" placeholder="Username">
-        <!--        <label for="name">name</label>-->
-        <input type="text" id="name" name="name" class="register-input" placeholder="name">
-        <!--        <label for="email">Email</label>-->
-        <input type="email" id="email" name="email" class="register-input" placeholder="Email">
-        <!--        <label for="phoneNumber">phoneNumber</label>-->
-        <input type="text" id="phoneNumber" name="phoneNumber" class="register-input" placeholder="phoneNumber">
-        <!--        <label for="restaurantName">restaurantName</label>-->
-        <input type="text" id="restaurantName" name="restaurantName" class="register-input"
-               placeholder="restaurantName">
-        <!--        <label for="categories">categories</label>-->
-        <input type="text" id="categories" name="categories" class="register-input" placeholder="categories">
-        <!--        <label for="description">description</label>-->
-        <input type="text" id="description" name="description" class="register-input" placeholder="description">
-        <!--        <label for="businessLicenseNo">businessLicenseNo</label>-->
-        <input type="text" id="businessLicenseNo" name="businessLicenseNo" class="register-input"
-               placeholder="businessLicenseNo">
-        <!--        <label for="latitude">latitude</label>-->
-        <input type="text" id="latitude" name="latitude" class="register-input" placeholder="latitude">
-        <!--        <label for="longitude">longitude</label>-->
-        <input type="text" id="longitude" name="longitude" class="register-input" placeholder="longitude">
-        <!--        <label for="province">province</label>-->
-        <input type="text" id="province" name="province" class="register-input" placeholder="province">
-        <!--        <label for="city">city</label>-->
-        <input type="text" id="city" name="city" class="register-input" placeholder="city">
-        <!--        <label for="street">street</label>-->
-        <input type="text" id="street" name="street" class="register-input" placeholder="street">
-        <!--        <label for="searchKeyWords">searchKeyWords</label>-->
-        <input type="text" id="searchKeyWords" name="searchKeyWords" class="register-input"
-               placeholder="searchKeyWords">
+        <h2 style="color: #8B60C7; width: 90%; margin: 5px auto 5px auto">기본 정보</h2>
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">ID</span>
+            <input type="text" id="username" class="form-control" placeholder="Username" aria-label="Username"
+                   aria-describedby="addon-wrapping">
+        </div>
+        <!--        <input type="text" id="username" name="username" class="register-input" placeholder="Username">-->
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">이름</span>
+            <input type="text" id="name" class="form-control" placeholder="Name" aria-label="Name"
+                   aria-describedby="addon-wrapping">
+        </div>
+        <!--        <input type="text" id="name" name="name" class="register-input" placeholder="name">-->
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">Email</span>
+            <input type="text" id="email" class="form-control" placeholder="Email" aria-label="Email"
+                   aria-describedby="addon-wrapping">
+        </div>
+        <!--        <input type="email" id="email" name="email" class="register-input" placeholder="Email">-->
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">전화번호</span>
+            <input type="text" id="phoneNumber" class="form-control" placeholder="PhoneNumber" aria-label="PhoneNumber"
+                   aria-describedby="addon-wrapping">
+        </div>
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">사업자번호</span>
+            <input type="text" id="businessLicenseNo" class="form-control" placeholder="BusinessLicenseNo"
+                   aria-label="BusinessLicenseNo" aria-describedby="addon-wrapping">
+        </div>
+        <!--        <input type="text" id="phoneNumber" name="phoneNumber" class="register-input" placeholder="phoneNumber">-->
+        <br>
+        <h2 style="color: #8B60C7; width: 90%; margin: 5px auto 5px auto">레스토랑 정보</h2>
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">가게명</span>
+            <input type="text" id="restaurantName" class="form-control" placeholder="RestaurantName"
+                   aria-label="RestaurantName" aria-describedby="addon-wrapping">
+        </div>
+        <!--        <input type="text" id="restaurantName" name="restaurantName" class="register-input"-->
+        <!--               placeholder="restaurantName">-->
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">카테고리</span>
+            <input type="text" id="categories" class="form-control" placeholder="Categories" aria-label="Categories"
+                   aria-describedby="addon-wrapping">
+            <input onclick="openSelectCategory()" type="button" value="카테고리 선택">
+        </div>
+        <div class="selectCategoryBox">
+            <div class="selectParentCategoryBox"></div>
+            <div class="selectChildCategoryBox"></div>
+            <div class="selectGrandChildCategoryBox"></div>
+        </div>
+        <!--        <input type="text" id="categories" name="categories" class="register-input" placeholder="categories">-->
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">설명</span>
+            <input type="text" id="description" class="form-control" placeholder="Description" aria-label="Description"
+                   aria-describedby="addon-wrapping">
+        </div>
+        <!--        <input type="text" id="description" name="description" class="register-input" placeholder="description">-->
+
+        <!--        <input type="text" id="businessLicenseNo" name="businessLicenseNo" class="register-input"-->
+        <!--               placeholder="businessLicenseNo">-->
+
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">우편번호</span>
+            <input type="text" id="sample6_postcode" class="form-control" placeholder="우편번호" aria-label="Postcode"
+                   aria-describedby="addon-wrapping">
+            <input onclick="sample6_execDaumPostcode()" type="button" value="우편번호 찾기">
+        </div>
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">주소</span>
+            <input type="text" id="sample6_address" class="form-control" placeholder="주소" aria-label="Address"
+                   aria-describedby="addon-wrapping">
+        </div>
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text">상세주소</span>
+            <input type="text" id="sample6_detailAddress" class="form-control" placeholder="상세주소"
+                   aria-label="DetailAddress" aria-describedby="addon-wrapping">
+        </div>
+        <!--        <input type="text" id="province" name="province" class="register-input" placeholder="province">-->
+        <!--        <input type="text" id="city" name="city" class="register-input" placeholder="city">-->
+        <!--        <input type="text" id="street" name="street" class="register-input" placeholder="street">-->
+        <!--        <input type="text" id="searchKeyWords" name="searchKeyWords" class="register-input"-->
+        <!--               placeholder="searchKeyWords">-->
         <button type="submit" class="login-btn">등록</button>
     </form>
 </div>
