--- a/src/main/resources/static/css/admin-style.css
+++ b/src/main/resources/static/css/admin-style.css
@@ -281,20 +281,24 @@ header > a > div {
 }
 
 .register-wrap {
-    max-width: 500px;
+    /*max-width: 500px;*/
     min-width: 400px;
-    width: 25%;
+    width: 80%;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
 
     border: 1px solid dimgray;
     border-radius: 10px;
 
     margin: 3px auto 3px auto;
     padding: 5px 5px 5px 5px;
+}
+
+.input-group-text {
+    width: 100px;
 }
 
 .register-input {
@@ -315,4 +319,61 @@ header > a > div {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+}
+
+.category {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.parentCategory {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+
+    padding: 5px 5px 5px 5px;
+}
+
+.parentCategoryList {
+    /*max-width: 200px;*/
+    /*width: 20%;*/
+
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+}
+
+.parentCategoryElement {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+
+    /*border: 1px solid dimgray;*/
+    /*border-radius: 10px;*/
+
+    margin: 5px auto 5px auto;
+}
+
+.input-group {
+    width: 90%;
+    margin: 5px auto 5px auto;
+}
+
+.selectCategoryBox {
+    width: 90%;
+    margin: 5px auto 5px auto;
+    padding: 5px 5px 5px 5px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+
+    border: 1px solid dimgray;
+    border-radius: 10px;
 }
