--- a/src/main/resources/templates/seller.html
+++ b/src/main/resources/templates/seller.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>판매자 관리</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="./jquery.cookie.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -20,7 +22,7 @@
     <nav>
         <ul>
             <a href="/">판매자 님</a>
-            <a href="hello.html" th:href="@{/hello}" th:method="get">
+            <a th:href="@{/seller/logout}" th:method="get" enctype="multipart/form-data">
                 <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
             </a>
         </ul>
@@ -40,8 +42,8 @@
     <!--        <button onclick="sendTokenLogout()" type="button">로그아웃</button>-->
     <!--    </a>-->
 
-    <a href="hello.html" th:href="@{/hello}" th:method="get">
-        <button onclick="sendTokenDelete()" type="button" class="btn">회원탈퇴</button>
+    <a th:href="@{/seller/delete}" th:method="delete" enctype="multipart/form-data">
+        <button type="button" class="btn">회원탈퇴</button>
     </a>
 
     <a href="seller-infos.html" th:href="@{/seller/infos}" th:method="get">
@@ -104,26 +106,20 @@
         window.location.href = '/seller/restaurant/blacklist-demand-page';
     }
 
+
     function sendTokenLogout() {
-        fetch("/seller/logout", {
-            type: 'get',
-            headers: {
-                'content-type': 'application/json',
-                'Authorization': localStorage.getItem("accessToken"),
-            }
-        })
-        localStorage.removeItem('accessToken');
+        _fnSetCookie("Authorization", "", "-1");
     }
 
-    function sendTokenDelete() {
-        fetch("/seller/delete", {
-            type: 'get',
-            headers: {
-                'content-type': 'application/json',
-                'Authorization': localStorage.getItem("accessToken"),
-            }
-        })
-        localStorage.removeItem('accessToken');
-    }
+    // function sendTokenDelete() {
+    //     fetch("/seller/delete", {
+    //         type: 'get',
+    //         headers: {
+    //             'content-type': 'application/json',
+    //             'Authorization': localStorage.getItem("accessToken"),
+    //         }
+    //     })
+    //     localStorage.removeItem('accessToken');
+    // }
 </script>
 </html>
