[feat] 카테고리, 레스토랑 매핑 테이블 기능 추가

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -116,7 +116,7 @@
 
             $.ajax({
                 type: 'GET',
-                url: `/api/admin/categories/` + parentId,
+                url: `/api/categories/` + parentId,
                 success: function (response, status) {
                     console.log(response)
                     if (status === 'success') {
@@ -147,7 +147,7 @@
 
             $.ajax({
                 type: 'GET',
-                url: `/api/admin/categories/` + parentId,
+                url: `/api/categories/` + parentId,
                 success: function (response, status) {
                     console.log(response)
                     if (status === 'success') {
