[fix] address 값 변경에 따른 관련 데이터 수정

--- a/src/main/resources/templates/admin/restaurant-list.html
+++ b/src/main/resources/templates/admin/restaurant-list.html
@@ -124,7 +124,7 @@
                     <td th:text="${restaurant.category}"></td>
                     <td th:text="${restaurant.searchKeywords}"></td>
                     <td th:text="${restaurant.businessNo}"></td>
-                    <td th:text="${restaurant.province} + ' ' + ${restaurant.city} + ' ' + ${restaurant.street}"></td>
+                    <td th:text="${restaurant.address} + ' ' + ${restaurant.detailAddress}"></td>
                     <td th:text="${restaurant.deleted}"></td>
                     <td th:text="${restaurant.user.username}"></td>
                     <td>
